--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Horiseon</h1>
         <div>
             <ul>
                 <li>
@@ -27,7 +27,7 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -71,11 +71,10 @@
             </p>
         </div>
     </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
+    <footer>
+        <h1>Made with ❤️️ by Horiseon</h1>
+        <p>2019 Horiseon Social Solution Services, Inc.</p>
+    </footer>
     </div>
 </body>
 
