--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <h1>Horiseon</h1>
         <div>
             <ul>
@@ -24,18 +24,20 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <div class="hero"></div>
+    </header>
+
+    <div class="hero"></div>  
+    
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="" class="float-left" />
+            <img src="search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="" class="float-right" />
+            <img src="online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -65,7 +67,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src=></img>
+            <img src="cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
